2014-08-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* dvipdfm-bb.test, xdvipdfm-bb.test: Also test .bmp and .jp2.
	* tests/image.{bmp,dvi,jp2,tex}: Additional test input.
	* tests/{img,pic}{bmp,jp2}.{bb,xbb}: Expected test output.

2014-08-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* jp2image.c: Declare scan_file() as static. Drop variables
	that are set but not used [-Wunused-but-set-variable].

2014-08-11  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>

	* bmpimage.[ch], jp2image.[ch] (new), pdfximage.c, xbb.c:
	Add support for JPEG 2000 (JP2 and JPX baseline subset) and
	BMP support for extractbb.

2014-08-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am: Drop libutil.a, i.e., compile all files once for
	dvipdfmx and once for xdvipdfmx.

2014-08-05  Jiang Jiang  <gzjjgod@gmail.com>

	* tt_cmap.c (otf_create_ToUnicode_stream, create_ToUnicode_cmap):
	Only load CMAP_TYPE_CODE_TO_CID cmap to do reverse lookup when
	constructing ToUnicode streams for PDF.

	* type0.c, type0.h, pdffont.c: Remove redundant pdf_font_findfont()
	function.

2014-08-05  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* pst_obj.c, t1_char.c: ANSI C function protos and definitions,
	i.e., FOO(void) instead of FOO().

2014-08-04  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* tt_cmap.c (create_ToUnicode_cmap): Drop unused variables.

2014-08-04  Jiang Jiang  <gzjjgod@gmail.com>

	* cff.c (cff_get_glyphname): Remove duplicated cff_read_charsets()
	call.

	* tt_cmap.c (sfnt_get_glyphname, create_ToUnicode_cmap): Make sure
	we only do glyph name lookup for CFF fonts when they are not CID
	fonts.

	* cmap_read.c: Fix warnings when comparing size_t with negative
	value (< 0).

2014-08-03  Jiang Jiang  <gzjjgod@gmail.com>

	* tt_cmap.c (sfnt_get_glyphname, handle_subst_glyphs): Fix error on
	glyph name lookup.

	* cff.c (cff_glyph_lookup), pdfdev.c (pdf_dev_set_string): Correctly
	handles the dvi file when Unicode to CID mapping file is specified,